--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@mui/material": "^5.14.17",
     "axios": "^1.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^8.57.0",
